added suggestions and backer info

--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
 
     </div>
 
+    <div id="suggestions">
+        <form id="ideas">
+        Suggestions for New Games to Crowdfund:
+          <input type="text">
+          <input type="submit">
+        </form>
+    </div>
+
     <script type="module" src="index.js"></script>
   </body>
 </html>
